# podcast-app

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/rules/: db-repositories.mdc  enum-callable-dispatch.mdc  formatting.mdc  icons.mdc  project-structure.mdc  settings.mdc
.cursor/skills/adding-svg-icons/: SKILL.md  reference.md
.github/workflows/: codeql.yaml  scan.yaml  tests.yaml
etc/: code-agent.service  docker-compose.yml  docker-entrypoint  nginx.conf  podcast-app.service
src/: __init__.py  constants.py  exceptions.py  main.py  schemas.py  settings.py  utils.py  worker.py
src/migrations/: env.py
src/migrations/versions/: 0010_fill_file_model.py  0019_userip_store_hashed_address.py  0021_pre_initial.py  0022_initial.py  0023_users_add_missing_created_at.py  0024_podcast_media_ids_nullable.py
src/modules/: schemas.py
src/modules/admin/: __init__.py  application.py  auth.py  dashboard.py  forms.py  views.py
src/modules/api/: __init__.py  auth.py  base.py  cookies.py  episodes.py  errors.py  media.py  misc.py  podcasts.py
src/modules/auth/: backend.py  before_request.py  constants.py  guards.py  hashers.py  load_user.py  middlewares.py  tokens.py  types.py  utils.py
src/modules/common/: enums.py
src/modules/db/: __init__.py  dependencies.py  repositories.py  services.py  session.py  utils.py
src/modules/db/models/: __init__.py  base.py  media.py  podcasts.py  users.py
src/modules/dto/: podcasts.py
src/modules/schemas/: __init__.py  auth.py  common.py  episodes.py  errors.py  media.py  playlist.py  podcasts.py  progress.py  statistics.py
src/modules/services/: cover.py  email.py  encryption.py  episode_creator.py  episodes.py  ffmpeg.py  redis.py  statistic.py  storage.py
src/modules/tasks/: __init__.py  base.py  download.py  process.py  rss.py
src/modules/utils/: common.py  ffmpeg.py  files.py  processing.py
src/modules/views/: __init__.py  auth.py  base.py  episodes.py  index.py  media.py  podcasts.py  system.py  users.py
src/schemas/: __init__.py  auth.py  common.py  cookies.py  episodes.py  podcasts.py  system.py
src/settings/: __init__.py  app.py  db.py  log.py  utils.py
src/static/css/: podcast-app.css
src/templates/: about.html  base.html  episode_detail.html  episodes.html  episodes_detail.html  index.html  login.html  podcasts.html  podcasts_detail.html  profile.html  progress.html
src/templates/snippets/: episode_card.html  episode_in_list.html  episodes.html  icons.html  modals.html
src/templates/sqladmin/: error.html  index.html  login.html
src/tests/: __init__.py  conftest.py  factories.py  helpers.py  mocks.py
src/tests/admin/: test_admin.py
src/tests/api/: test_auth.py  test_cookies.py  test_episodes.py  test_errors.py  test_media.py  test_misc.py  test_podcasts.py  test_system.py
src/tests/auth/: test_before_request.py  test_hashers.py  test_load_user.py  test_tokens.py
src/tests/services/: test_cover.py  test_encryption.py  test_episodes.py  test_redis.py  test_statistic.py  test_storage.py
src/tests/tasks/: test_base.py  test_download.py  test_process.py  test_rss.py
src/tests/utils/: test_common.py  test_ffmpeg.py  test_processing.py  test_root_utils.py
src/tests/views/: __init__.py  test_auth.py  test_base.py  test_index.py  test_media.py  test_podcasts.py  test_system.py  test_users.py
