[project]
name = "podcast-app"
version = "0.1.0"
description = "A web application for creating podcasts"
requires-python = ">=3.14"
dependencies = [
    "litestar[jinja]==2.21.1",
    "uvicorn[standard]==0.41.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "sqlalchemy[asyncio]==2.0.48",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "uvloop==0.22.1",
    "pycryptodome==3.23.0",
    "aioboto3==15.5.0",
    "redis==7.3.0",
    "yt-dlp==2026.3.3",
    "rq==2.7.0"
]

[dependency-groups]
dev = [
    # types
    "types-yt-dlp==2026.*",
    "types-aioboto3==15.*",
    "botocore-stubs==1.42.*",
    # testing
    "pytest>=9,<10",
    "pytest-asyncio>=1.3,<1.4",
    "coverage>=7.13,<7.14",
    # format and linting
    "black>=26.1,<27.0",
    "ruff>=0.15,<0.16",
    "mypy>=0.19,<1.20",
    # pycharm requires
    "setuptools<83.0",
    "pip<27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py314"]
