[project]
name = "podcast-app"
version = "0.1.0"
description = "A web application for creating podcasts"
requires-python = ">=3.14"
dependencies = [
    "litestar[jinja]==2.23.0",
    "httpx[socks]==0.28.1",
    "uvicorn[standard]==0.49.0",
    "pydantic[email]==2.13.4",
    "pydantic-settings==2.14.1",
    "sqlalchemy[asyncio]==2.0.50",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "uvloop==0.22.1",
    "pycryptodome==3.23.0",
    "aioboto3==15.5.0",
    "redis==8.0.0",
    "yt-dlp==2026.3.17",
    "rq==2.9.1",
    "pyjwt==2.13.0",
    "sentry-sdk[litestar,rq]==2.61.1",
    "aiosmtplib==5.1.1",
    "sqladmin[full]==0.27.2",
]

[dependency-groups]
dev = [
    # types
    "types-yt-dlp==2026.3.17.20260605",
    "types-aioboto3==15.*",
    "botocore-stubs==1.43.14",
    "types-WTForms==3.2.1.20260518",
    # testing
    "pytest>=9,<10",
    "pytest-asyncio==1.4.0",
    "coverage==7.14.1",
    # format and linting
    "black>=26.1,<27.0",
    "ruff==0.15.16",
    "mypy==2.1.0",
    # pycharm requires
    "setuptools<83.0",
    "pip==26.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.mypy]
exclude = [
    "^legacy_api_views.py$",
    "^src/tests/",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/tests/*",
    "src/migrations/*",
    "src/legacy-tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
